# mcp-memory-server

./: .dockerignore  .env.development  .env.example  .env.production  .gitattributes  .gitignore  =1.0.0  API.md  AUTO_MEMORY_GUIDE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHANGES_SUMMARY_EN.md  CLAUDE_WINDSURF_SETUP.md  CLOUD_DEPLOYMENT.md  CLOUD_SETUP_GUIDE.md  CONTRIBUTING.md  CURSOR_HTTP_CONFIG.md  CURSOR_INTEGRATION.md  CURSOR_READY_TO_GO.md  DATASET_ACCESS_GUIDE.md  DATASET_INVENTORY.md  Dockerfile  ESSENTIAL_FILES.md  FINAL_SUMMARY.md  FUTURE_CLOUD_ARCHITECTURE.md  GITHUB_SETUP_INSTRUCTIONS.md  HUGGINGFACE_INTEGRATION.md  INSTALLATION.md  INSTALLATION_PROMPT.md  INSTALL_FROM_GITHUB.md  INTEGRATION_GUIDE.md  LICENSE  MASSIVE_INVESTIGATION_RESULTS.md  MERGE_SUMMARY.md  ML_TRIGGER_IMPLEMENTATION.md  MODELS_GUIDE.md  Makefile  Meeting Transcription (2).txt  NEXT_STEPS.md  PLUGIN_ECOSYSTEM.md  (+105 more)
.cursor/: mcp.json  mcp_auto.json  mcp_full.json  mcp_settings.json  settings.json
.github/: pull_request_template.md
ai-setup-assistant/: assistant.py
browser-extension/: background.js  content.js  manifest.json  memory-ui.css  popup.html  popup.js
chocolatey/: mcp-memory-server.nuspec
cloud/: .env.example  __init__.py  api_gateway.py  billing_system.py  cloud_config.example  cloud_integration.py  cost_analysis.py  mongodb_provisioner.py  optimized_pricing.py  setup_guide.py  usage_example.py
colab/: MCP_Memory_AutoTrigger_Training.ipynb
config/: claude_config.json  cursor_config.json  env.example  proxy_config.yaml  settings.yaml  settings.yaml.example  smart_automation_config.json  windsurf_config.json
cursor_configs/: README.md  mcp_ml.json  mcp_simple.json
data/: dataset_metadata.json  expanded_dataset_sample.json  final_dataset_sample.json  full_dataset_sample.json  production_dataset_sample.json  ultimate_70k_metadata.json  ultimate_70k_sample.json  ultimate_dataset_metadata.json
deployment/: deploy.sh  nginx.conf
(+198 files in other folders)
